최종업로드

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 </head>
 
 <body>
+  <!-- 안내창 -->
+  <div class="modal">
+    <div class="modal-cont">
+      <p>
+        본 사이트는 포트폴리오용 사이트로 <br>
+        리소스는 원저작자에게 있습니다.
+      </p>
+      <span>HTML5, CSS3, javaScript & jQuery로 제작되었으며,
+        크롬에 최적화 되어있습니다. 닫기버튼을 눌러주세요</span>
+  
+      <button class="madal-close">닫기</button>
+    </div>
+  </div>
+  <!-- 안내창 -->
 
   <div class="fix">
 
@@ -173,6 +187,21 @@
       <!--//서브메뉴  -->
 
     </header>
+
+
+    <!-- 소니사이트 -->
+    <section class="sonysite">
+      <div class="container">
+        기능을 보여준다는것에 의의를 두겠습니다 ㅋㅋㅋㅋ
+        <br>
+        본문은 열심히 꾸몄습니다ㅎㅎ ^^*
+        <br>
+        <span>닫기버튼을 눌러주세요</span>
+        <button class="sonysite-close">❌</button>
+      </div>
+    </section>
+
+
     <!-- 비주얼 -->
     <section class="visual">
       <div class="container">
